# programmer

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  prepare.bat  prepare.sh
include/: MainWindow.h
src/: CMakeLists.txt  General.cpp  General.h  MainWindow.cpp  Settings.cpp  Settings.h  main.cpp
src/Models/: Programmer.cpp  Programmer.h  SectorPresetsModel.cpp  SectorPresetsModel.h  SectorTableModel.cpp  SectorTableModel.h  SectorsTableModel.cpp  SectorsTableModel.h  SerialPortListModel.cpp  SerialPortListModel.h
src/Operations/: Clear.cpp  Clear.h  Dump.cpp  Dump.h  Operation.cpp  Operation.h  Program.cpp  Program.h  Verify.cpp  Verify.h
src/Widgets/: BaudRateSelector.cpp  BaudRateSelector.h  ConnectionWidget.cpp  ConnectionWidget.h  LinkButton.cpp  LinkButton.h  SectorPresetsWidget.cpp  SectorPresetsWidget.h  SectorTableWidget.cpp  SectorTableWidget.h  SectorsPresetsWidget.cpp  SectorsPresetsWidget.h  SectorsTableWidget.cpp  SectorsTableWidget.h  SerialPortSelector.cpp  SerialPortSelector.h
src/Windows/: MainWindow.cpp  MainWindow.h  MainWindowUI.cpp  MainWindowUI.h  OperationDialog.cpp  OperationDialog.h  ProgrammingDialog.cpp  ProgrammingDialog.h
